Overflow X fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,7 @@ body {
     font-style: normal;
     user-select: none;
     background-color: #00000000;
+    overflow-x: hidden;
 }
 
 #content-bg {
